Added email validation and assigned user_types based on profile information from osu profile directory. Added acknowledgement to README

--- a/lab-4/config/locales/devise.en.yml
+++ b/lab-4/config/locales/devise.en.yml
@@ -60,6 +60,7 @@ en:
       expired: "has expired, please request a new one"
       not_found: "not found"
       not_locked: "was not locked"
+      invalid: "should be in the format of lastname.#@osu.edu"
       not_saved:
         one: "1 error prohibited this %{resource} from being saved:"
         other: "%{count} errors prohibited this %{resource} from being saved:"
